# FlappyBirdGame

./: .gitignore  CMakeLists.txt  FlappyBirdGame.sln  LICENSE  README.md  build-helper.ps1  vcpkg.json
FlappyBirdGame/: CMakeLists.txt  FlappyBirdGame.rc  FlappyBirdGame.vcxproj  FlappyBirdGame.vcxproj.filters  entrypoint.c  resource.h
FlappyBirdGame/headers/: base.h  bird.h  game.h  land.h  pipe.h  sound.h
FlappyBirdGame/sources/: Source.cpp  base.cpp  bird.cpp  game.cpp  land.cpp  main.cpp  pipe.cpp  sound.cpp
Launcher/: CMakeLists.txt  Launcher.rc  Launcher.vcxproj  Launcher.vcxproj.filters  launcher.c
